<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FilterHabitsFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_filter_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="фитрация по приоритету"
        style="@style/edit_text_field_create_habit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/rg_filter_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_priority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_filter_priority_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_priority_low"
            android:background="@drawable/background_field_input_text"/>

        <Button
            android:id="@+id/btn_filter_priority_mid"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_priority_mid"
            android:background="@drawable/background_field_input_text"/>

        <Button
            android:id="@+id/btn_filter_priority_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_priority_high"
            android:background="@drawable/background_field_input_text"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_sort_count"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_text_sort_count"
        style="@style/edit_text_field_create_habit"
        app:layout_constraintTop_toBottomOf="@id/rg_filter_priority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_sort_increase_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_sort_increase"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sort_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_sort_decrease_count"
        android:background="@drawable/background_field_input_text"/>

    <Button
        android:id="@+id/btn_sort_decrease_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/filter_sort_decrease"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sort_count"
        app:layout_constraintStart_toEndOf="@id/btn_sort_increase_count"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_field_input_text"/>

    <TextView
        android:id="@+id/tv_sort_frequency"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_text_sort_count"
        style="@style/edit_text_field_create_habit"
        app:layout_constraintTop_toBottomOf="@id/btn_sort_increase_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_sort_increase_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_sort_increase"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sort_frequency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_sort_decrease_count"
        android:background="@drawable/background_field_input_text"/>

    <Button
        android:id="@+id/btn_sort_decrease_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/filter_sort_decrease"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sort_frequency"
        app:layout_constraintStart_toEndOf="@id/btn_sort_increase_count"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_field_input_text"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_cancel"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_sort_increase_frequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/background_field_input_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>